--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngx-perfect-scrollbar": "^7.2.1",
     "pe7-icon": "^1.0.4",
     "redux": "4.0.0",
+    "sweetalert2": "^7.22.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
